JSR 292: java.lang.RuntimeException: Original target method was called.

XMLWordPrintable

    • b56

        [2013-08-13T06:30:48.24] Original bootstrap(): Lookup vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0; method name = greet; method type = (Object,String,int)Boolean
        [2013-08-13T06:30:48.28] # ERROR: Test caught an exception:
        [2013-08-13T06:30:48.28] # ERROR: java.lang.reflect.InvocationTargetException
        [2013-08-13T06:30:48.28] # ERROR: at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        [2013-08-13T06:30:48.29] # ERROR: at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
        [2013-08-13T06:30:48.29] # ERROR: at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        [2013-08-13T06:30:48.29] # ERROR: at java.lang.reflect.Method.invoke(Method.java:491)
        [2013-08-13T06:30:48.30] # ERROR: at vm.mlvm.indy.func.jvmti.share.IndyRedefineTest.run(IndyRedefineTest.java:25)
        [2013-08-13T06:30:48.30] # ERROR: at vm.mlvm.share.MlvmTest.runMlvmTest(MlvmTest.java:225)
        [2013-08-13T06:30:48.30] # ERROR: at vm.mlvm.share.MlvmTest.launch(MlvmTest.java:141)
        [2013-08-13T06:30:48.31] # ERROR: at vm.mlvm.share.MlvmTest.launch(MlvmTest.java:111)
        [2013-08-13T06:30:48.31] # ERROR: at vm.mlvm.indy.func.jvmti.share.IndyRedefineTest.main(IndyRedefineTest.java:39)
        [2013-08-13T06:30:48.31] # ERROR: Caused by: java.lang.RuntimeException: Original target method was called. Test failed.
        [2013-08-13T06:30:48.32] # ERROR: at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget0(Unknown Source)
        [2013-08-13T06:30:48.32] # ERROR: at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget0(Unknown Source)
        [2013-08-13T06:30:48.32] # ERROR: at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget(Unknown Source)
        [2013-08-13T06:30:48.33] # ERROR: ... 9 more
        [2013-08-13T06:30:48.39] # ERROR: Test caught an exception:
        [2013-08-13T06:30:48.40] # ERROR: java.lang.RuntimeException
        [2013-08-13T06:30:48.40] # ERROR: at vm.mlvm.share.MlvmTest.throwAsUnckechedException(MlvmTest.java:184)
        [2013-08-13T06:30:48.40] # ERROR: at vm.mlvm.share.MlvmTest.runMlvmTest(MlvmTest.java:236)
        [2013-08-13T06:30:48.41] # ERROR: at vm.mlvm.share.MlvmTest.launch(MlvmTest.java:141)
        [2013-08-13T06:30:48.41] # ERROR: at vm.mlvm.share.MlvmTest.launch(MlvmTest.java:111)
        [2013-08-13T06:30:48.41] # ERROR: at vm.mlvm.indy.func.jvmti.share.IndyRedefineTest.main(IndyRedefineTest.java:39)
        [2013-08-13T06:30:48.42] # ERROR: Caused by: java.lang.reflect.InvocationTargetException
        [2013-08-13T06:30:48.42] # ERROR: at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        [2013-08-13T06:30:48.42] # ERROR: at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
        [2013-08-13T06:30:48.43] # ERROR: at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        [2013-08-13T06:30:48.43] # ERROR: at java.lang.reflect.Method.invoke(Method.java:491)
        [2013-08-13T06:30:48.44] # ERROR: at vm.mlvm.indy.func.jvmti.share.IndyRedefineTest.run(IndyRedefineTest.java:25)
        [2013-08-13T06:30:48.44] # ERROR: at vm.mlvm.share.MlvmTest.runMlvmTest(MlvmTest.java:225)
        [2013-08-13T06:30:48.44] # ERROR: ... 3 more
        [2013-08-13T06:30:48.45] # ERROR: Caused by: java.lang.RuntimeException: Original target method was called. Test failed.
        [2013-08-13T06:30:48.46] # ERROR: at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget0(Unknown Source)
        [2013-08-13T06:30:48.46] # ERROR: at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget0(Unknown Source)
        [2013-08-13T06:30:48.47] # ERROR: at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget(Unknown Source)
        [2013-08-13T06:30:48.47] # ERROR: ... 9 more
        [2013-08-13T06:30:48.64] ### TRACE 1: TEST FAILED
        [2013-08-13T06:30:48.71] Exception in thread "main" java.lang.RuntimeException
        [2013-08-13T06:30:48.71] at vm.mlvm.share.MlvmTest.throwAsUnckechedException(MlvmTest.java:184)
        [2013-08-13T06:30:48.72] at vm.mlvm.share.MlvmTest.runMlvmTest(MlvmTest.java:236)
        [2013-08-13T06:30:48.73] at vm.mlvm.share.MlvmTest.launch(MlvmTest.java:141)
        [2013-08-13T06:30:48.75] at vm.mlvm.share.MlvmTest.launch(MlvmTest.java:111)
        [2013-08-13T06:30:48.76] at vm.mlvm.indy.func.jvmti.share.IndyRedefineTest.main(IndyRedefineTest.java:39)
        [2013-08-13T06:30:48.76] Caused by: java.lang.reflect.InvocationTargetException
        [2013-08-13T06:30:48.81] at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        [2013-08-13T06:30:48.82] at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
        [2013-08-13T06:30:48.82] at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        [2013-08-13T06:30:48.83] at java.lang.reflect.Method.invoke(Method.java:491)
        [2013-08-13T06:30:48.83] at vm.mlvm.indy.func.jvmti.share.IndyRedefineTest.run(IndyRedefineTest.java:25)
        [2013-08-13T06:30:48.83] at vm.mlvm.share.MlvmTest.runMlvmTest(MlvmTest.java:225)
        [2013-08-13T06:30:48.84] ... 3 more
        [2013-08-13T06:30:48.84] Caused by: java.lang.RuntimeException: Original target method was called. Test failed.
        [2013-08-13T06:30:48.85] at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget0(Unknown Source)
        [2013-08-13T06:30:48.85] at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget0(Unknown Source)
        [2013-08-13T06:30:48.86] at vm.mlvm.indy.func.jvmti.mergeCP_indy2none_b.INDIFY_Dummy0.invokeTarget(Unknown Source)
        [2013-08-13T06:30:48.86] ... 9 more

              Assignee:
              Vladimir Ivanov
              Reporter:
              Rickard Backman (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: