8023004: JSR 292: java.lang.RuntimeException: Original target method was called. Reviewed-by: jrose Contributed-by: vladimir.ivanov@oracle.com, serguei.spitsyn@oracle.com